# tsl

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
install/pyinla/: __init__.py  _api.py  _safety.py  binary.py  binary_manager.py  collect.py  control_defaults.py  create_data_file.py  fmesher_io.py  inla_call.py  marginal_utils.py  models.py  options.py  os.py  pc_bym.py  pyinla_report.py  qinv.py  read_graph.py  rprior.py  scale_model.py  sections.py  sm.py  surv.py  utils.py
install/pyinla/fmesher/: README.md  __init__.py  core.py  example.py  exceptions.py  install.py  mesh.py  pyproject.toml  spde.py
install/pyinla/model_defs/: __init__.py  latent.py  likelihood.py  other_sections.py  transforms.py
